- Added some log entries for quest "Key to Luck"
- Weakened goats a little more
- fixed ambient dialogs for nameless NPCs that aren't synchronized yet
- added missing log entry at Hyglas in ice cave
- Constantino now expects just two of each potion for his first quest when being is apprentice
- Attitude bonus now isn't changed while player is transformed



1.0.2

Enhancements:

- some traders now have also poisons and healing buds to make some quests easier

General Fixes:

- Switched SVM and take for picklock failure and broken picklock
- Bartok now gives the hero gold for his swamp herb instead of vice versa
- HP regeneration really works now as expected
- Fixed lost effects at map origin
- Constantinos ingredients list now ends up correctly in log when reading it
- Monsters now can't output SVMs anymore
- tweaked Ghost of Shadow Warrior effect a little more
- fixed wrong text when mining skill is raised
- Serpentes' wine thief quest improved by better log entries and better acting of the thief
- Lester's dialog at the troll in Relendel isn't permanent anymore
- added missing log entry at Friedel after competition so player knows that he has to go to Lukas again
- fixed several problems with English and Polish translation as soon as Free Aiming was enabled
- Quest "Halvor's fish delivery" can now also be completed in case William is already dead
- added missing log entry when hero got nail package from Erika
- Matteo's apples can't be sold anymore
- Fixed changing protection during transformation
- fixed error with disabled free aim
- small optimizations and fixes that are easier to do, nicer and have better performance with GFA
- fixed missing Ornament at Onar for Polish and English version
- Sword of the Militia now can be sharpened



1.0.1

Enhancements:

- translated more parts for English translation
- note pieces for secret chamber now are combined after collecting more than one of them